<resources>
    <string name="app_name">PlantTamagochi</string>

    <!-- Log in -->
    <string name="hint_user">Usuario…</string>
    <string name="hint_password">Contraseña…</string>
    <string name="log_in">Log in</string>

    <!-- Errors -->
    <string name="field_required">No puede estar vacío…</string>

    <!-- Opciones Menu -->
    <string name="txtOpcHistorico">Histórico</string>
    <string name="txtAboutText">Acerca de</string>
    <string name="txtPreferences">Preferencias</string>
    <string name="txtAjustes">Ajustes</string>
    <string name="txtNoAcceso">No tienes acceso</string>
    <string name="perfil">Perfil</string>
    <string name="txtOpcCerrarSesion">¿Estás seguro que quieres cerrar sesión?</string>
    <string name="txtYesDialog">Si</string>
    <string name="txtNoDialog">No</string>
    <string name="txtOpcTituloCerrarSesion">Perfil: Cerrar Sesión</string>

    <!-- Main -->
    <string name="txtSaludo">Hola, Sergio!</string>
    <string name="txtPregunta">¿Qué quieres hacer hoy?</string>
    <string name="txtTransportarPlanta">Comprueba la ciudad a la que es más conveniente llevar tu planta</string>
    <string name="txtVerPlanta">Podrás conocer los valores de temperatura y humedad de tu planta</string>
    <string name="btnTransportarPlanta">Transportar Planta</string>
    <string name="btnVerPlanta">Ver Planta</string>
    <string name="CerrarSesion">Cerrar Sesión</string>

    <!-- Transportar planta -->

    <string name="txtSeleccionado">Tu recomendación si estás en: </string>
    <string name="txtCiudad">Ciudad</string>
    <string name="txtComprobar">Comprobar</string>
    <string name="txtselecciona">Selecciona una ciudad</string>
    <string name="txtregistro">Registrarse</string>
    <string name="hint_password2">Repetir Contraseña...</string>
    <string name="field_not_equal">Las contraseñas deben ser igual</string>
    <string name="txtTemperatura">Temperatura</string>
    <string name="txtHumedad">Humedad</string>

</resources>