<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/opcHistorico"
        android:title="@string/txtOpcHistorico"
        android:orderInCategory="20"
        />
    <item
        android:id="@+id/opcAjustes"
        android:title="@string/txtAjustes"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/opcPreferences"
        android:title="@string/txtPreferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/opcAcercaDe"
        android:title="@string/txtAboutText"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        />

</menu>