<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_plant_autum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="86dp"
        app:layout_constraintBottom_toTopOf="@+id/fieldUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_miw_launcher_rounded"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/fieldUser"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="27dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hint_user"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fieldPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="309dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldUser" />

    <EditText
        android:id="@+id/fieldPassword2"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hint_password2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldPassword" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/orange"
        android:text="@string/txtregistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldPassword2" />

</androidx.constraintlayout.widget.ConstraintLayout>